# swordfish

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: rust.yml
swordfish/: Cargo.toml  build.rs
swordfish-common/: Cargo.toml
swordfish-common/src/: constants.rs  lib.rs  structs.rs  tesseract.rs
swordfish-common/src/database/: katana.rs  mod.rs
swordfish-common/src/tesseract/: libtesseract.rs  mod.rs  subprocess.rs
swordfish-common/src/utils/: karuta.rs  katana.rs  mod.rs
swordfish-user/: Cargo.toml
swordfish-user/src/: main.rs
swordfish/src/: config.rs  debug.rs  helper.rs  katana.rs  main.rs
swordfish/src/template/: message.rs  mod.rs
swordfish/src/tesseract/: libtesseract.rs  mod.rs  subprocess.rs  utils.rs
