[package]
name = "swordfish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
image = "0.24.7"
once_cell = "1.19.0"
serde = "1.0.193"
serenity = { version = "0.12.0", features = ["builder"] }
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"

[dependencies.swordfish-common]
path = "../swordfish-common"
